--- a/docs/demo/css/style.css
+++ b/docs/demo/css/style.css
@@ -2,48 +2,38 @@
     padding: 0;
     margin: 0
 }
-
 html{
     font-size: 16px
 }
-
 html,body,#container{
     width: 100%;
     height: 100%;
 }
-
-
 li{
     list-style: none
 }
-
 a{
     text-decoration: none
 }
-
 .ellipsis {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-
 #container{
     display: flex;
     flex-direction: column;
 }
-
 .content{
     flex: 1 1 50%;   
     height: 100%;
     display: flex;
     flex-direction: column;
-    margin: 2rem 10rem
+    margin: 0rem 10rem
 }
-
 .content .menu{
     flex: 0 0 2rem;
 }
-
 .content .files{
     flex: 1 1 auto;
     border-radius: 7px;
@@ -53,27 +43,25 @@ a{
     overflow: auto;
     min-width: 10rem;
 }
-
 .header{
-    flex: 0 0 3rem;
-    line-height: 3rem;
+    flex: 0 0 5rem;
+    line-height: 5rem;
     color: #756;
     text-align: center;
+    font-size: 2rem;
+    font-weight: 500
 }
-
 .footer{
      flex: 0 0 3rem;
      text-align: center;
+     line-height: 3rem;
 }
-
 
 /* 文件路径：Begin */
 .menu li{
     display: inline-block
 }
-
 /*文件路径：End */
-
 
 /* 右键菜单：begin  */
 #right-menu{
@@ -83,7 +71,6 @@ a{
     z-index: 2;
     background-color: #FFF;
 }
-
 #right-menu a{
         line-height: 2rem;
         color: #756;        
@@ -93,28 +80,22 @@ a{
     border-radius: 0.2rem;
     min-width: 6rem;
 }
-
 #right-menu li:hover{
     border: 0.1rem solid #AFD;
     border-radius: 0.2rem
 }
-
 /* 右键菜单：end  */
 
 /*文件和文件夹：begin*/
-
 .files{
     display: flex;
     flex-wrap:wrap;  
     align-content: flex-start;  
 }
-
 .files .item{
     flex: 0 0 25%;
     text-align: center
 }
-
-
 .files img{  
     height: 3rem;
     width: 3rem;
